<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sexmeter</string>
    <string name="notification_subtitle">Sto contando le tue ficcate</string>

    <string name="started">Sexmeter started.</string>
    <string name="stopped">Sexmeter stopped.</string>

    <string name="steps">corsa</string>
    <string name="kilometers">kilometri</string>
    <string name="miles">miglia</string>
    <string name="steps_per_minute">ficcaggi / minute</string>
    <string name="kilometers_per_hour">km/h</string>
    <string name="miles_per_hour">miles/hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">centimetri</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>

    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    
    <!-- Settings -->
    <string name="settings">Impostazioni</string>
    <string name="activity_settings">Sexmeter impostazioni</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensibilità</string>
    <string name="sensitivity_setting_details">Calibrazione della sensibilità dei movimenti</string>
    <string name="sensitivity_setting_title">Selezione la sensibilità</string>
    <string name="extra_high">extra alta</string>
    <string name="very_high">molto alta</string>
    <string name="high">alta</string>
    <string name="higher">altissima</string>
    <string name="medium">media</string>
    <string name="lower">bassissima</string>
    <string name="low">bassa</string>
    <string name="very_low">molto bassa</string>
    <string name="extra_low">extra bassa</string>
    <string name="operation_level_setting">Livello operativo</string>
    <string name="operation_level_setting_details">Alcune versioni di OS prevengono l\'uso dei sensori quando lo schermo è spento; Imposta il livello che meglio funziona per te</string>
    <string name="operation_level_setting_title">Seleziona il livello operativo</string>
    <string name="run_in_background">Normale</string>
    <string name="keep_screen_on">Tiene lo schermo accesso</string>
    <string name="wake_up">Sempre attivo</string>
    <string name="units_setting">Unità di misura</string>
    <string name="units_setting_details">Unità metriche o imperiali</string>
    <string name="units_setting_title">Scegli l\'unità di misura</string>
    <string name="units_metric">metric (kilometri)</string>
    <string name="units_imperial">imperial (miglia)</string>
    <string name="step_length_setting">Corsa del pisello</string>
    <string name="step_length_setting_details">Per il calcolare il percorso. (Default 12 cm.)</string>
    <string name="step_length_setting_title">Inserisci la corsa del tuo pisello</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect length format! Go to the Settings to change it!</string>

    <string name="quit">Esci</string>
    
    <string name="title_section1">Statistiche personali</string>
    <string name="title_section2">Statistiche globali</string>
    <string name="title_section3">Obiettivi globali</string>
    
</resources>
